--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>barcode-flow-nexus</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>CPC - Product Management System</title>
+    <meta name="description" content="CPC Product Management System for barcode tracking and production management" />
+    <meta name="author" content="CPC" />
 
-    <meta property="og:title" content="barcode-flow-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="CPC - Product Management System" />
+    <meta property="og:description" content="CPC Product Management System for barcode tracking and production management" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
